// This .proto file contains all the models used as data transfer objects, a.k.a DTOs

syntax = "proto3";
package liveconfiguration.protobuf;

option csharp_namespace = "LiveConfiguration.Core.Protobuf";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

// Represents a group of configuration entries.
message ConfigurationGroup {
    // The id of the configuration group.
    string uid = 1;

    // The name of the configuration group.
    string name = 2;

    // A small and optional description.
    google.protobuf.StringValue description = 3;

    // The date and time when it was created.
    google.protobuf.Timestamp created_at = 4;

    // The date and time when it was modified.
    google.protobuf.Timestamp modified_at = 5;

    // The number of entries.
    uint32 entries_count = 6;

    // The current version in production.
    uint64 current_version = 7;
}

// Represents a configuration group version
message ConfigurationGroupVersion {
    
    // The target configuration group id
    string group_uid = 1;

    // The version of the group.
    uint64 version = 2;

    // The date and time when the version was created.
    google.protobuf.Timestamp created_at = 3;

    // The date and time when the version was published.
    google.protobuf.Timestamp publish_at = 4;
}

// Represents a configuration entry with a value.
message ConfigurationEntry {
    string key = 1;
    string name = 2;
    google.protobuf.StringValue description = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp modified_at = 5;
    ConfigurationEntryValue value = 6;
}

// Represents a configuration entry value.
message ConfigurationEntryValue {
    ConfigurationEntryValueType value_type = 1;
    oneof value {
        ConfigurationEntryNullValue null = 2;
        bool bool_value = 3;
        string string_value = 4;
        int64 int_value = 5;
        double double_value = 6;
        google.protobuf.Timestamp timestamp_value = 7;
        google.protobuf.Duration duration_value = 8;
        ConfigurationEntryListValue list_value = 9;
        ConfigurationEntryMapValue map_value = 10;
        string raw_json_value = 11;
        bytes blob_value = 12;
    }
}

message ConfigurationEntryListValue {
    repeated ConfigurationEntryValue values = 1;
}

message ConfigurationEntryMapValue {
    repeated ConfigurationEntryMapValueField fields = 1;
    message ConfigurationEntryMapValueField {
        string name = 1;
        ConfigurationEntryValue value = 2;
    }
}

message ConfigurationEntryNullValue {
    ConfigurationEntryNullValueEnum value = 1;
    enum ConfigurationEntryNullValueEnum {
        ConfigurationEntryNullValueEnum_NULL = 0;
    }
}

enum ConfigurationEntryValueType {
    CONFIGURATION_ENTRY_VALUE_TYPE_NULL = 0;
    CONFIGURATION_ENTRY_VALUE_TYPE_BOOLEAN = 1;
    CONFIGURATION_ENTRY_VALUE_TYPE_STRING = 2;
    CONFIGURATION_ENTRY_VALUE_TYPE_INT = 3;
    CONFIGURATION_ENTRY_VALUE_TYPE_DOUBLE = 4;
    CONFIGURATION_ENTRY_VALUE_TYPE_TIMESTAMP = 5;
    CONFIGURATION_ENTRY_VALUE_TYPE_DURATION = 6;
    CONFIGURATION_ENTRY_VALUE_TYPE_LIST = 7;
    CONFIGURATION_ENTRY_VALUE_TYPE_MAP = 8;
    CONFIGURATION_ENTRY_VALUE_TYPE_RAW_JSON = 9;
    CONFIGURATION_ENTRY_VALUE_TYPE_BLOB = 10;
}